--- a/admin/members.yml
+++ b/admin/members.yml
@@ -3,9 +3,9 @@
 #
 
 members:
-  - name:
-    uid:
-  - name:
-    uid:
-  - name:
-    uid:
+  - name: Vincent Tanumihardja
+    uid: u7145408
+  - name: Hao Zhang
+    uid: u6523462
+  - name: Samuel Barilaro
+    uid: u7298894
