--- a/admin/members.yml
+++ b/admin/members.yml
@@ -5,7 +5,10 @@
 members:
   - name: Vincent Tanumihardja
     uid: u7145408
+    contact: 0414194720
   - name: Hao Zhang
     uid: u6523462
+    contact: 0432293816
   - name: Samuel Barilaro
     uid: u7298894
+    contact: 0448355637
