--- a/admin/C-contribution.yml
+++ b/admin/C-contribution.yml
@@ -2,25 +2,25 @@
 # statement.
  
 declaration: >-
-  We declare that the work toward our submission of Stage C was distributed among the group members as follows:
+  We declare that the work toward our submission of Stage B was distributed among the group members as follows:
 
 # State your contributions as integers out of 100. The total contribution should
 # be 100 or 99 (33/33/33 is fine).  (Remove entries if you have fewer than three
 # members).  
 contributions:
-  - uid: 
-    contribution: 
-  - uid:
-    contribution:
-  - uid:
-    contribution:
+  - uid: u7145408
+    contribution: 33
+  - uid: u6523462
+    contribution: 33
+  - uid: u7298894
+    contribution: 33
 
 # Sign *your* name and uids here. (Remove entries if you have fewer
 # than three members)
 signatures:
-  - name:
-    uid:
-  - name:
-    uid:
-  - name:
-    uid:
+  - name: Vincent Tanumihardja
+    uid: u7145408
+  - name: Hao Zhang
+    uid: u6523462
+  - name: Samuel Barilaro
+    uid: u7298894
