--- a/admin/F-contribution.yml
+++ b/admin/F-contribution.yml
@@ -10,19 +10,20 @@ declaration: >-
 # be 100 or 99 (33/33/33 is fine).  (Remove entries if you have fewer than three
 # members).
 contributions:
-  - uid: 
-    contribution: 
-  - uid:
-    contribution:
-  - uid:
-    contribution:
+  - uid: u7145408
+    contribution: 33
+  - uid: u6523462
+    contribution: 33
+  - uid: u7298894
+    contribution: 33
 
 # Sign *your* name and uids here. (Remove entries if you have fewer
 # than three members)
 signatures:
-  - name:
-    uid:
-  - name:
-    uid:
-  - name:
-    uid:
+  - name: Vincent Tanumihardja
+    uid: u7145408
+  - name: Hao Zhang
+    uid: u6523462
+  - name: Samuel Barilaro
+    uid: u7298894
+
