--- a/admin/G-presentation.yml
+++ b/admin/G-presentation.yml
@@ -1,2 +1,3 @@
 # use this file to record the ANU Sharepoint URL for your video presentation
-url: "https://anu365-my.sharepoint.com/:v:/g/personal/u1234567_anu_edu_au/xxxx"
+url: "https://anu365-my.sharepoint.com/:v:/g/personal/u6523462_anu_edu_au/EUFjs0_ay8tMk08fN7j14xMBRVGy8Cr_6snoK8g8Vdm9eA?e=4zkbXS"
+
